Improved drag arrows for laser rotation and translation
Fixed laser translation and rotation
Added initial support for laser translation
Added translation drag handles to the laser
Added a protractor to the prism tab, and made it rotatable and smaller
Moved clock controls to the left (intro tab)
Fixed: allow light to move directly from prism to prism so that prisms can overlap
Made prism border color a darker shade of the prism color instead of dark gray
Added a small protractor to the prism tab
Prevent laser from going to 90 degrees when in wave mode, should go until laser bumps into edge.
Added "low" and "high" labels to the left and right of the index of refraction slider (prism tab only)
Made the toolbox vertical instead of horizontal
Added a time speed slider
Improved design for index of refraction control
Improved normal line in the toolbox
Made it so the intensity meter adds up multiple beams instead of reporting ???
Changed the background color for control panels
Made reset all button yellow
Converted radio buttons for reflections into checkbox
Moved light behind controls
Got rid of numeric readout of index of refraction on prism break tab
Renamed labels for index of refraction: should say "objects" and "environment"
Made "index of refraction (n)" bold
Switched to protractor image with 5 degree tick marks
Turned off reflections by default in prism tab
Renamed to Bending Light
Made the incident beam width independent of incident angle
# 0.00.21 (49147) Feb 23, 2011
Fixed: Reset all should restart the clock if it was paused
Fixed: Default laser angle should be smaller or zero in prism tab
Fixed: Prisms aren't removed on reset all
Fixed: Intensity meter causes incorrect wave mode representation (phase is incorrect)
Fixed: Toolbox objects should move slightly when clicked (to cue user that they are draggable)
Fixed: Wavelength doesn't reset