@@ -3,12 +3,14 @@ package edu.colorado.phet.bendinglight.modules.intro;
 
 import java.awt.*;
 import java.awt.geom.Line2D;
+import java.awt.geom.Rectangle2D;
 
 import edu.colorado.phet.bendinglight.view.*;
 import edu.colorado.phet.common.phetcommon.model.BooleanProperty;
 import edu.colorado.phet.common.phetcommon.model.Property;
 import edu.colorado.phet.common.phetcommon.model.Resettable;
 import edu.colorado.phet.common.phetcommon.util.Function1;
+import edu.colorado.phet.common.phetcommon.util.Function2;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.common.phetcommon.view.VerticalLayoutPanel;
 import edu.colorado.phet.common.phetcommon.view.controls.PropertyRadioButton;
@@ -38,7 +40,16 @@ public class IntroCanvas extends BendingLightCanvas<IntroModel> {
             public Boolean apply( Double aDouble ) {
                 return aDouble > Math.PI / 2;
             }
-        }, true, resetAll );
+        }, true, resetAll,
+               new Function2<Shape, Shape, Shape>() {
+                   public Shape apply( Shape full, Shape front ) {
+                       return new Rectangle2D.Double( 0, 0, 0, 0 );//no region can be translated
+                   }
+               }, new Function2<Shape, Shape, Shape>() {
+                    public Shape apply( Shape full, Shape back ) {
+                        return full; //rotation if the user clicks anywhere on the object.
+                    }
+                } );
         mediumNode.addChild( new MediumNode( transform, model.topMedium ) );
         mediumNode.addChild( new MediumNode( transform, model.bottomMedium ) );
 
